fix text align

--- a/src/app/components/Dashboard/ArmedStatus/style.scss
+++ b/src/app/components/Dashboard/ArmedStatus/style.scss
@@ -18,6 +18,7 @@
       .label {
         font-size: 2rem;
         margin-bottom: 1rem;
+        text-align: center;
       }
     }
   }
